@@ -21,4 +21,4 @@ svn_url = svn://svn.zope.org/repos/main/
 packages = zope.dottedname z3c.recipe.compattest
 
 [versions]
-zc.buildout = 1.4.4
+zc.buildout = 1.5.1
